@@ -1,0 +1,68 @@
+Source: freeipa
+Section: net
+Priority: extra
+Maintainer: Debian FreeIPA Team <pkg-freeipa-devel@lists.alioth.debian.org>
+Uploaders: Timo Aaltonen <tjaalton@debian.org>
+Build-Depends:
+ 389-ds-base-dev (>= 1.3.5.6),
+ check,
+ debhelper (>= 9),
+ dh-autoreconf,
+ dh-python,
+ dh-systemd,
+ gettext,
+ krb5-user,
+ libcmocka-dev,
+ libini-config-dev,
+ libkrad-dev,
+ libkrb5-dev (>= 1.16),
+ libldap2-dev,
+ libnspr4-dev,
+ libnss3-dev,
+ libpopt-dev,
+ librhino-java,
+ libsasl2-dev,
+ libssl-dev,
+ libsss-idmap-dev,
+ libsss-certmap-dev,
+ libsss-nss-idmap-dev (>= 1.14.0),
+ libsvrcore-dev,
+ libtalloc-dev,
+ libtevent-dev,
+ libunistring-dev,
+ libverto-dev,
+ libxmlrpc-core-c3-dev (>= 1.33.06),
+ pki-base (>= 10.3.5-6),
+ python-all-dev,
+ python-cryptography,
+ python-dbus,
+ python-dnspython (>= 1.11.1),
+ python-gssapi,
+ python-jinja2,
+ python-kdcproxy,
+ python-ldap (>= 2.4.15),
+ python-lesscpy,
+ python-libipa-hbac,
+ python-libsss-nss-idmap,
+ python-lxml,
+ python-netaddr,
+ python-netifaces (>= 0.10.4),
+ python-nose,
+ python-nss (>= 0.16.0),
+ python-polib,
+ python-pyasn1,
+ python-qrcode (>= 5.0.0),
+ python-setuptools,
+ python-six,
+ python-sss (>= 1.14.0),
+ python-usb (>= 1.0.0~b2),
+ python-yubico,
+ rhino,
+ samba-dev,
+ systemd,
+ uuid-dev
+Standards-Version: 3.9.6
+Vcs-Git: https://anonscm.debian.org/git/pkg-freeipa/freeipa.git
+Vcs-Browser: https://anonscm.debian.org/cgit/pkg-freeipa/freeipa.git
+Homepage: http://www.freeipa.org
+
