@@ -5,10 +5,26 @@
 
 DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
 
+ONLY_CLIENT=0
 DESTDIR=$(CURDIR)/debian/tmp
 
 JAVA_STACK_SIZE ?= 8m
 export JAVA_STACK_SIZE
+
+confflags = \
+	--libexecdir=/usr/lib/ \
+	--with-ipaplatform=debian \
+	--with-sysconfenvdir=/etc/default \
+	--disable-pylint \
+	--without-jslint
+
+ifeq ($(ONLY_CLIENT), 1)
+confflags += --disable-server \
+	--without-ipatests
+else
+confflags += --enable-server \
+	--with-ipatests
+endif
 
 # For maintainer use only, generate a tarball:
 SOURCE = freeipa
@@ -18,13 +34,20 @@ gentarball:
 		xz --best \
 		> ../$(SOURCE)_$(UV).orig.tar.xz
 
-override_dh_auto_configure:
-	dh_auto_configure -- \
-		--libexecdir=/usr/lib/ \
-		--with-ipaplatform=debian \
-		--with-sysconfenvdir=/etc/default \
-		--disable-pylint \
-		--without-jslint
+gencontrol:
+ifeq ($(ONLY_CLIENT), 1)
+	cat debian/control.stub \
+	debian/control.common \
+	> debian/control
+else
+	cat debian/control.stub \
+	debian/control.common \
+	debian/control.server \
+	> debian/control
+endif
+
+override_dh_auto_configure: gencontrol
+	dh_auto_configure -- $(confflags)
 
 # tests would just fail, they need a proper environment with 389 running et al
 override_dh_auto_test:
@@ -32,6 +55,7 @@ override_dh_auto_test:
 override_dh_auto_install:
 	dh_auto_install --max-parallel=1
 
+ifneq ($(ONLY_CLIENT), 1)
 	chmod 755 $(DESTDIR)/usr/lib/ipa/certmonger/*
 
 	touch $(DESTDIR)/usr/share/ipa/html/ca.crt
@@ -45,6 +69,7 @@ override_dh_auto_install:
 	install -m 0644 contrib/completion/ipa.bash_completion \
 		$(DESTDIR)/usr/share/bash-completion/completions/ipa
 	rm -rf $(DESTDIR)/etc/bash_completion.d
+endif
 
 	# purge .la files
 	find $(CURDIR)/debian/tmp -name "*.la" -type f -exec rm -f "{}" \;
@@ -58,11 +83,13 @@ override_dh_auto_install:
 override_dh_missing:
 	dh_missing --fail-missing
 
+ifneq ($(ONLY_CLIENT), 1)
 override_dh_systemd_enable:
 	dh_systemd_enable -pfreeipa-server --no-enable ipa.service
 	dh_systemd_enable -pfreeipa-server --no-enable ipa-dnskeysyncd.service
 	dh_systemd_enable -pfreeipa-server --no-enable ipa-custodia.service
 	dh_systemd_enable -pfreeipa-server --no-enable ipa-ods-exporter.service
+endif
 
 override_dh_fixperms:
 	dh_fixperms
